# kestrel-feature-observability

./: .gitignore  AGENTS.md  README.md  kestrel_obs_claude_hook.py  package.json  pyproject.toml  swimlane.lanes.test.mjs
.github/workflows/: ci.yml  publish.yml
kestrel_feature_observability/: __init__.py  _ui.py  endpoints.py  feature.py  hook.py  metrics.py  telemetry.py  tracing.py
kestrel_feature_observability/endpoints/: __init__.py  metrics.py  observability.py
kestrel_feature_observability/fleet/: __init__.py  endpoints.py  feature.py  models.py  store.py
kestrel_feature_observability/fleet/migrations/versions/: 0001_create_observability_events.py
kestrel_feature_observability/fleet/static/: navigator.js  observability.js  phoenix.js  runs.js  swimlane.js  timeline.js
kestrel_feature_observability/observability/: __init__.py  feature.py  hook.py
kestrel_feature_observability/static/: llm-calls.js  timeline.js
kestrel_feature_observability/wellness/: __init__.py  feature.py  metrics.py
tests/: conftest.py  test_backplane.py  test_claude_hook.py  test_data_plane.py  test_endpoints.py  test_endpoints_router.py  test_feature.py  test_metrics.py  test_models.py  test_navigator_read_model.py  test_observability_feature.py  test_redaction.py  test_span_navigation_contract.py  test_store.py  test_telemetry.py  test_timeline_render_model.py  test_tool_result_contracts.py  test_tracing.py  test_ui_contributions.py  timeline.nesting.test.mjs
tests/fixtures/: talon_trace.json
