[project]
name = "kestrel-feature-observability"
version = "0.9.0"
description = "Observability feature for Kestrel Sovereign — a per-agent emitter that POSTs hook-driven lifecycle events to the fleet observability store, with a shared Prometheus registry"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "UncleSaurus" }]
maintainers = [{ name = "UncleSaurus" }]
keywords = [
    "ai",
    "agents",
    "kestrel",
    "observability",
    "prometheus",
    "metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "kestrel-sovereign-sdk>=0.14.1,<1",
    # Lightweight HTTP client for the fire-and-forget emitter POST to the
    # fleet host's observability ingest. No entities/fleet dep.
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Pulls prometheus-client through the SDK's [metrics] extra so the
# feature shares the framework's CollectorRegistry. Without this
# extra installed, the feature still logs to the observability
# store; only the Prometheus side becomes a no-op.
metrics = [
    "kestrel-sovereign-sdk[metrics]>=0.14.1,<1",
]
# Host role: pulls the entities event store + the HostFeature contract so the
# guarded `FleetObservabilityHostFeature` activates. Absent (a base emitter
# install), the fleet subpackage degrades to a no-op and imports stay clean with
# no `entities` pulled in.
fleet = [
    # HostFeature / HostContext / UIContributions contract. Tracks the host SDK
    # range (kestrel-sovereign pins >=0.30.0,<0.31) so `[fleet]` installs into
    # the host env without an unsatisfiable resolve.
    "kestrel-sovereign-sdk>=0.30.0,<0.31",
    # Fleet event store: SQLAlchemy 2.0 async + Alembic, fail-closed tenant scoping.
    "kestrel-feature-entities>=0.1,<1",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    # The fleet HostFeature contract tracks the host SDK range (>=0.30.0,<0.31);
    # the test env exercises both the emitter and the fleet role, so intersect
    # on it.
    "kestrel-sovereign-sdk[metrics]>=0.30.0,<0.31",
    "kestrel-feature-entities>=0.1,<1",
    # Host-root routers exercised via FastAPI TestClient; host-provided at runtime.
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://kestrelsovereign.com"
Source = "https://github.com/KestrelSovereignAI/kestrel-feature-observability"
Issues = "https://github.com/KestrelSovereignAI/kestrel-feature-observability/issues"

[project.entry-points."kestrel_sovereign.features"]
ObservabilityFeature = "kestrel_feature_observability.feature:ObservabilityFeature"

# Host-scoped feature discovery (the host runtime scans this group), NOT the
# per-agent `kestrel_sovereign.features` group above. Guarded: the fleet
# subpackage resolves this to `None` on a base install where the `[fleet]` extra
# (entities) is absent, so the host simply skips it.
[project.entry-points."kestrel_sovereign.host_features"]
FleetObservabilityHostFeature = "kestrel_feature_observability.fleet:FleetObservabilityHostFeature"

# Entities discovery (only scanned by the entities CLI, which requires the
# `[fleet]` extra): the ORM model module (so Alembic introspects it into the
# merged metadata) and this package's local Alembic migration directory.
[project.entry-points."kestrel_entities.models"]
observability_fleet = "kestrel_feature_observability.fleet.models"

[project.entry-points."kestrel_entities.migrations"]
observability_fleet = "kestrel_feature_observability.fleet.migrations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_observability"]
# Ship the fleet console static bundle + Alembic revisions (non-.py package data).
artifacts = [
    "kestrel_feature_observability/fleet/static/**/*",
    "kestrel_feature_observability/fleet/migrations/**/*",
]

[tool.hatch.build.targets.sdist]
include = ["kestrel_feature_observability/**/*", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Ensure the package is importable from the repo root even when pytest is
# invoked from a foreign environment where this package is not installed
# (the verification gate runs a bare ``pytest -q`` off PATH).
pythonpath = ["."]
